# differentiable-voxelization

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: install-and-test.yml  main.yml  wheels.yml
demos/: README.md  arap.py  bandsaw_experiment.ipynb  requirements.txt  self-intersection_experiment.ipynb  tiling_experiment.ipynb  util.py
dvx/: __init__.py  common.py  extension.py
dvx/torch/: __init__.py  voxelize.py
src/: CMakeLists.txt  aabb.hpp  allocator.cpp  allocator.hpp  bitset.cpp  bitset.hpp  closed_form.hpp  common.hpp  coverage.hpp  differentiation.hpp  explicit.hpp  ext.cpp  filter.hpp  flags.hpp  grid.hpp  log.cpp  log.hpp  math.hpp  monte_carlo.hpp  winding_number.hpp
tests/: test_voxelize_mesh.py  utils.py
tutorials/: derivative_tests.ipynb  function_tests.ipynb  helper.py  playground.ipynb  playground_3d.ipynb  speed_tests.ipynb
