[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "dvx"
requires-python = ">=3.8"
version = "0.0.1"
authors = [
        {name = "Markus Worchel", email = "m.worchel@tu-berlin.de"},
        {name = "Ugo Finnendahl", email = "finnendahl@tu-berlin.de"},
        {name = "Tobias Djuren", email = "t.djuren@tu-berlin.de"}
]
license = {file = "LICENSE"}
description = "..."
urls = {Homepage = "https://github.com/mworchel"}

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = ["numpy",
        "pytest"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Exclude files from sdist
sdist.exclude = [".gitignore", ".gitmodules", 
                 "ext/nanobind/.github/*", "ext/nanobind/docs/*", "ext/nanobind/tests/*"]

[tool.cibuildwheel]
# Run the package tests on every wheel using `pytest`
# test-command = "pytest {package}/tests"
# will install pytest and other packages in the `test` extra
# test-extras = ["test"]
# Skip testing of PyPy and 32-bit wheels
# test-skip = ["pp*", "*win32", "*i686", "*-musllinux*"]
# Skip building on CPython 3.8 on all platforms
skip = "cp38-*"
build = ["*-macosx_x86_64", "*-macosx_universal2", "*-macosx_arm64", "*-win_amd64", "*-manylinux_x86_64", "*-musllinux_x86_64"]

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
